<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_levels"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/holo_green_dark"
            />

        <TextView
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_moves"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/holo_green_dark"
            />

        <TextView
            android:id="@+id/text_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <pt.isel.poo.li23d.g2.powerplant.view.tile.TilePanel
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:gridLine="1"
        app:backgroundTiles="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/back_to_menu"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_nextLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/next_level"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>